--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@ body {
       <th>Neptune</th>
     </tr>
     <tr>
-      <td>Planets of Milky Way</td>
-      <td><img src="https://www.linkpicture.com/q/Venus.jpg" alt="Venus" width="360" height="155"></td>
-      <td><img src="https://www.linkpicture.com/q/Jupiter.jpg" alt="Jupiter" width="360" height="155"></td> 
-      <td><img src="https://www.linkpicture.com/q/Uranus.jpg" alt="Uranus" width="360" height="155"></td>
-      <td><img src="https://www.linkpicture.com/q/Neptune-2.jpg" alt="Neptune" width="360" height="155"></td>
+      <td>Planets from the Milky Way</td>
+      <td><img src="https://www.linkpicture.com/q/Venus.jpg" alt="Venus" width="350" height="150"></td>
+      <td><img src="https://www.linkpicture.com/q/Jupiter.jpg" alt="Jupiter" width="350" height="150"></td> 
+      <td><img src="https://www.linkpicture.com/q/Uranus.jpg" alt="Uranus" width="350" height="150"></td>
+      <td><img src="https://www.linkpicture.com/q/Neptune-2.jpg" alt="Neptune" width="350" height="150"></td>
     </tr>
     <tr>
-      <td>Fact #1(Mass)</td>
-      <td>4.867 × 10^24 kg</td>
-      <td>1898 × 10^24 kg</td>
-      <td>86.8 × 10^24 kg</td>
-      <td>102 × 10^24 kg</td>
+      <td>Fact #1(length of a year)</td>
+      <td>A day on Venus is longer than a year</td>
+      <td>about 12 Earth years</td>
+      <td>about 84 Earth years</td>
+      <td>about 165 Earth years</td>
     </tr>
     <tr>
       <td>Fact #2(Diameter)</td>
@@ -49,18 +49,18 @@ body {
       <td>4515.0 10^6 km</td>
     </tr>
     <tr>
-      <td>Fact #4(Rotation Period)</td>
-      <td>-5832.5 hours</td>
-      <td>9.9 hours</td>
-      <td>-17.2 hours</td>
-      <td>16.1 hours</td>
+      <td>Fact #4(weather type)</td>
+      <td>Venus is the hottest planet in the entire solar system</td>
+      <td>swirling storms</td>
+      <td>cloudy</td>
+      <td> huge storms with extremely high winds</td>
     </tr>
     <tr>
-      <td>Fact #5(Density)</td>
-      <td>5243 kg/m^3</td>
-      <td>1326 kg/m^3</td>
-      <td>1270 kg/m^3</td>
-      <td>1638 kg/m^3</td>
+      <td>Fact #5(how far from earth)</td>
+      <td>38 million miles </td>
+      <td>385 million miles</td>
+      <td> 1.6 billion miles</td>
+      <td>2.7 billion miles</td>
     </tr>
     <tr>
       <td>Fact #6(mean temperature)</td>
